sass/app.scss
@import "compass/css3";

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 300;
  src: local('Roboto Light'), local('Roboto-Light'), url(http://themes.googleusercontent.com/static/fonts/roboto/v7/Hgo13k-tfSpn0qi1SFdUfT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
}
@font-face {
  font-family: 'Roboto';
  font-style: bold;
  font-weight: 400;
  src: local('Roboto Regular'), local('Roboto-Regular'), url(http://themes.googleusercontent.com/static/fonts/roboto/v7/2UX7WLTfW3W8TclTUvlFyQ.woff) format('woff');
}
@font-face {
  font-family: 'Chocolate Dealer';
  font-style: normal;
  font-weight: 400;
  src: local('Chocolate Dealer'), local('chocolatedealer'), url('font/chocolate-dealer.woff') format('woff');
}
$base-color: #ccc;
$red: #d92332;
$page-width:1000px;
$logo-width:252px;
$base-font: 'Roboto', Verdana, sans-serif;

.clearfix {
  *zoom: 1;
  &:before, &:after {
    display: table;
    content: "";
  }
  &:after {
    clear: both;
  }
}
@mixin no-select() {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
@mixin no-anchor() {
  text-decoration: none;
}

body {
  margin: 0;
  padding: 0;
  *zoom: 1;
  font-size:16px;
  color: $base-color;
  font-family: $base-font;
  background: url('../images/texels/body-main.png') top left repeat;
}
.wrapper {
  position: relative;
  width:$page-width;
  margin:0 auto;
}
#header {
  @include no-select();
  position: fixed;
  top:0; left:0;
  width:100%;
  height: 70px;
  color: white;
  font-family: 'Chocolate Dealer', 'Monotype Corsiva','Apple Chancery','ITC Zapf Chancery',cursive;
  z-index: 1000;
  background: url('../images/texels/body-main.png') top left repeat;
  .strip {
    background: $red;
    height: 5px;
    width:100%;
    position: relative;
    left: 0;
    z-index: 100;
  }
  .up { top: 0; }
  .down { top: 10px; }
  #mid {
    position: relative;
    top: 5px;
    width: 100%;
    height: 55px;
    background: url('../images/texels/head-main.png') top left repeat;
    z-index: 200;
  }
  #logo {
    z-index: 1000;
    position: absolute;
    top: 0;
    left: 50%;
    margin-left:-118px;
    width:252px;
  }

  #hud, #menu {
    float:left;
    line-height:55px;
    font-size:28px;
  }
  #menu {
    float:right;
    &>ul {
      list-style: none;
      margin: 0; padding: 0;
      li {
        cursor: pointer;
        @include inline-block();
      }
    }
  }
}
#footer {
  position: fixed;
  bottom:0;
  width:100%;
  height:4em;
  background-color: #ebebeb;
  background: url('../images/texels/foot-main.png') top left repeat;
  text-align: center;
  border-top: 1px dotted #dddddd;
  z-index: 500;
  .trim {
    position: relative;
    width:100%;
    margin-top:-7px;
    height:7px;
    background: url('../images/texels/foot-trim.png') top left repeat;
    background-color: transparent;
    @include box-shadow(white 0 5px 5px 0);
    z-index: 501;
  }
}
#help-nav, #about-nav {
  float:left;
  padding: 1em 0 0;
  color: #333333;
  line-height: 32px;
  ul {
    list-style: none;
    margin:0;
  }
  ul > li {
    margin-left:20px;
    &:first-child { margin-left: 0; }
    float: left;
    text-transform: uppercase;
    font-weight: 300;
    a {
      color: $red;
      @include no-anchor();
    }
  }
}
#about-nav {
  float:right;
  .pl-logo-small { display: block; }
}


#main {
  position: relative;
  min-height: 80%;
  margin-top:5em;

  color: #333;
  z-index: 50;
}
.left-strip, .right-strip {
  box-sizing: border-box;
  min-height: 50%;
  float: left;
  width:500px;
  padding:0 100px 0;
  font-weight: 300;
  text-align: center;
}
#gyan {
  text-align: left;
  h3 {
    text-transform: uppercase;
    color: $red;
    @include text-shadow(rgba(black, 0.5) 0 2px 2px);
  }
  p {
    color: #aaaaaa;
    font-size: 14px;
    line-height: 21px;
    em {
      color: $red;
      font-weight: 400;
    }
    a {
      color: $red;
      @include no-anchor();
    }
  }
}
#time-machine {
  margin-top:30px;
  @include text-shadow(rgba(black, 0.5) 0 2px 2px);
  text-transform: uppercase;
  color: $red;
  .med { font-size:36px; line-height:36px; }
  .conn {
    hr { width: 120px; @include inline-block(); height:2px; background-color: white; }
    .small { @include inline-block(); color: #aaaaaa; font-size:16px; line-height:16px; padding:0 5px; }
  }
  .small { font-size:22px; line-height:26px; }
  .big { font-size:42px; line-height:48px; }
  #pomo-technique-logo {
    margin-top:120px;
    background: url('../images/pomo-technik.png');
    width: 300px;
    height: 106px;
  }
}

.right-strip {
  @include no-select();
  padding-left:80px;
  border-left: 1px solid #888;
  text-transform: uppercase;
  .login-wrapper {
    position: relative;
  }
  #clock {
    position: relative;
    top:0; left:0;
  }
  #login {
    position: absolute;
    top:105px;
    width: 100%;
    left:0;
    cursor: pointer;
    color: #aaaaaa;
    &:hover { color: #ffffff; }
    .big { font-size:48px; line-height: 45px; @include text-shadow(rgba(black, 0.5) 0 2px 2px);
      a { color: #aaaaaa; @include no-anchor(); }
      a:hover { color: #ffffff; }
    }
    .small { font-size:18px; line-height: 25px; @include text-shadow(rgba(black, 0.5) 0 1px 1px); }
    .pl-logo-small { margin: 0 auto; }
  }
  #register {
    margin-top: 20px;
    color: #aaaaaa;
    .small { font-size:12px; line-height:12px; @include text-shadow(rgba(black, 0.5) 0 1px 1px); }
    .big { font-size:34px; line-height:35px; @include text-shadow(rgba(black, 0.5) 0 2px 2px);
      a { color:#aaaaaa; @include no-anchor(); }
      a:hover { color:#ffffff; }
    }
  }
}

#canvas {
  padding-top:40px;
  text-align: center;
}

#affix {
  width: 1000px;
  padding: 0 0 1.5em;
  z-index: 999;
  border-bottom: 1px dashed #ccc;
  position: relative;
}
/* ... */

